// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`base-template snapshot tests should match snapshot for full email 1`] = `
"
    <!DOCTYPE html>
    <html lang="en">
    <head>
      <meta charset="utf-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta name="x-apple-disable-message-reformatting">
      <meta name="color-scheme" content="light dark">
      <meta name="supported-color-schemes" content="light dark">
      <title>Test Notification</title>
      <!--[if mso]>
      <noscript>
        <xml>
          <o:OfficeDocumentSettings>
            <o:PixelsPerInch>96</o:PixelsPerInch>
          </o:OfficeDocumentSettings>
        </xml>
      </noscript>
      <![endif]-->
      <style>
        /* Dark mode support */
        @media (prefers-color-scheme: dark) {
          .email-container {
            background-color: #1a1a1a !important;
          }
          .email-content {
            background-color: #2d2d2d !important;
            color: #e5e5e5 !important;
          }
          .email-header {
            background-color: #18181b !important;
          }
          .email-footer {
            background-color: #262626 !important;
            border-color: #404040 !important;
          }
          .text-primary {
            color: #e5e5e5 !important;
          }
          .text-secondary {
            color: #a3a3a3 !important;
          }
          .text-muted {
            color: #737373 !important;
          }
          .card {
            background-color: #333333 !important;
            border-color: #404040 !important;
          }
          .button-primary {
            background-color: #3b82f6 !important;
            color: #ffffff !important;
          }
        }

        /* Mobile responsive */
        @media only screen and (max-width: 600px) {
          .email-container {
            width: 100% !important;
            margin: 0 !important;
          }
          .email-content {
            padding: 24px 16px !important;
          }
          .email-header {
            padding: 24px 16px !important;
          }
          h1 {
            font-size: 20px !important;
          }
          h2 {
            font-size: 18px !important;
          }
        }
      </style>
    </head>
    <body style="margin: 0; padding: 0; background-color: #f9fafb; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale;">

      <!-- Preheader text (hidden but shows in email preview) -->
      
      <div style="display: none; max-height: 0; overflow: hidden; mso-hide: all;">
        You have a new notification
      </div>
      

      <!-- Email Container -->
      <div class="email-container" style="max-width: 600px; margin: 40px auto; background-color: #ffffff; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);">

        <!-- Header -->
        <div class="email-header" style="background-color: #18181b; padding: 32px 24px; text-align: center;">
          <h1 style="color: #ffffff; margin: 0; font-size: 24px; font-weight: 700; letter-spacing: -0.025em;">
            Strummy
          </h1>
          <p style="color: #a3a3a3; margin: 8px 0 0 0; font-size: 14px; font-weight: 400;">
            Guitar Student Management
          </p>
        </div>

        <!-- Content -->
        <div class="email-content" style="padding: 32px 24px;">
          
          
    <h2 class="text-primary" style="color: #18181b; margin: 0 0 16px 0; font-size: 20px; font-weight: 600;">
      Important Update
    </h2>
  
          
    <p style="color: #52525b; margin: 0 0 24px 0; line-height: 1.6; font-size: 16px;">
      Hi John Student,
    </p>
  
          
    <p class="text-secondary" style="color: #52525b; margin: 0 0 16px 0; line-height: 1.6; font-size: 15px;">
      This is an important notification about your account.
    </p>
  
          
    <div class="card" style="margin-bottom: 24px; background-color: #f4f4f5; border-radius: 8px; border: 1px solid #e4e4e7; overflow: hidden; padding: 20px;">
      
    <div style="margin-bottom: 16px;">
      <p style="margin: 0 0 4px 0; font-size: 12px; color: #71717a; text-transform: uppercase; letter-spacing: 0.05em; font-weight: 600;">
        Date
      </p>
      <p style="margin: 0; color: #18181b; font-size: 16px; font-weight: 500;">
        February 10, 2026
      </p>
    </div>
  
    <div style="margin-bottom: 16px;">
      <p style="margin: 0 0 4px 0; font-size: 12px; color: #71717a; text-transform: uppercase; letter-spacing: 0.05em; font-weight: 600;">
        Status
      </p>
      <p style="margin: 0; color: #18181b; font-size: 16px; font-weight: 500;">
        
    <span style="display: inline-block; padding: 4px 10px; border-radius: 9999px; font-size: 12px; font-weight: 600; background-color: #10b981; color: #ffffff; white-space: nowrap;">
      Active
    </span>
  
      </p>
    </div>
  
    </div>
  
        

          
          <!-- Call to Action Button -->
          <div style="margin-top: 32px; text-align: center;">
            <a href="https://example.com/dashboard" class="button-primary" style="display: inline-block; padding: 14px 32px; background-color: #3b82f6; color: #ffffff; text-decoration: none; border-radius: 8px; font-weight: 600; font-size: 16px; box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);">
              View Details
            </a>
          </div>
          
        </div>

        <!-- Footer -->
        <div class="email-footer" style="background-color: #f4f4f5; padding: 24px; text-align: center; border-top: 1px solid #e4e4e7;">
          
          <p style="margin: 0 0 16px 0; font-size: 14px; color: #71717a; font-weight: 500;">
            Thank you for using Strummy!
          </p>
          

          <p style="margin: 0 0 12px 0; font-size: 14px; color: #71717a;">
            <a href="https://example.com/dashboard" style="color: #3b82f6; text-decoration: none; font-weight: 500;">
              View Dashboard
            </a>
            <span style="color: #d4d4d8; margin: 0 8px;">•</span>
            <a href="https://example.com/dashboard/settings" style="color: #71717a; text-decoration: none;">
              Notification Settings
            </a>
          </p>

          <p style="margin: 0 0 8px 0; font-size: 12px; color: #a1a1aa;">
            You're receiving this email because you have an account with Strummy Guitar CRM.
          </p>

          <p style="margin: 0; font-size: 12px; color: #a1a1aa;">
            © 2026 Strummy. All rights reserved.
          </p>
        </div>
      </div>

      <!-- Spacer for email clients -->
      <div style="height: 40px;"></div>
    </body>
    </html>
  "
`;

exports[`base-template snapshot tests should match snapshot for minimal email 1`] = `
"
    <!DOCTYPE html>
    <html lang="en">
    <head>
      <meta charset="utf-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta name="x-apple-disable-message-reformatting">
      <meta name="color-scheme" content="light dark">
      <meta name="supported-color-schemes" content="light dark">
      <title>Simple Notification</title>
      <!--[if mso]>
      <noscript>
        <xml>
          <o:OfficeDocumentSettings>
            <o:PixelsPerInch>96</o:PixelsPerInch>
          </o:OfficeDocumentSettings>
        </xml>
      </noscript>
      <![endif]-->
      <style>
        /* Dark mode support */
        @media (prefers-color-scheme: dark) {
          .email-container {
            background-color: #1a1a1a !important;
          }
          .email-content {
            background-color: #2d2d2d !important;
            color: #e5e5e5 !important;
          }
          .email-header {
            background-color: #18181b !important;
          }
          .email-footer {
            background-color: #262626 !important;
            border-color: #404040 !important;
          }
          .text-primary {
            color: #e5e5e5 !important;
          }
          .text-secondary {
            color: #a3a3a3 !important;
          }
          .text-muted {
            color: #737373 !important;
          }
          .card {
            background-color: #333333 !important;
            border-color: #404040 !important;
          }
          .button-primary {
            background-color: #3b82f6 !important;
            color: #ffffff !important;
          }
        }

        /* Mobile responsive */
        @media only screen and (max-width: 600px) {
          .email-container {
            width: 100% !important;
            margin: 0 !important;
          }
          .email-content {
            padding: 24px 16px !important;
          }
          .email-header {
            padding: 24px 16px !important;
          }
          h1 {
            font-size: 20px !important;
          }
          h2 {
            font-size: 18px !important;
          }
        }
      </style>
    </head>
    <body style="margin: 0; padding: 0; background-color: #f9fafb; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale;">

      <!-- Preheader text (hidden but shows in email preview) -->
      

      <!-- Email Container -->
      <div class="email-container" style="max-width: 600px; margin: 40px auto; background-color: #ffffff; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);">

        <!-- Header -->
        <div class="email-header" style="background-color: #18181b; padding: 32px 24px; text-align: center;">
          <h1 style="color: #ffffff; margin: 0; font-size: 24px; font-weight: 700; letter-spacing: -0.025em;">
            Strummy
          </h1>
          <p style="color: #a3a3a3; margin: 8px 0 0 0; font-size: 14px; font-weight: 400;">
            Guitar Student Management
          </p>
        </div>

        <!-- Content -->
        <div class="email-content" style="padding: 32px 24px;">
          <p>Simple message</p>

          
        </div>

        <!-- Footer -->
        <div class="email-footer" style="background-color: #f4f4f5; padding: 24px; text-align: center; border-top: 1px solid #e4e4e7;">
          

          <p style="margin: 0 0 12px 0; font-size: 14px; color: #71717a;">
            <a href="https://example.com/dashboard" style="color: #3b82f6; text-decoration: none; font-weight: 500;">
              View Dashboard
            </a>
            <span style="color: #d4d4d8; margin: 0 8px;">•</span>
            <a href="https://example.com/dashboard/settings" style="color: #71717a; text-decoration: none;">
              Notification Settings
            </a>
          </p>

          <p style="margin: 0 0 8px 0; font-size: 12px; color: #a1a1aa;">
            You're receiving this email because you have an account with Strummy Guitar CRM.
          </p>

          <p style="margin: 0; font-size: 12px; color: #a1a1aa;">
            © 2026 Strummy. All rights reserved.
          </p>
        </div>
      </div>

      <!-- Spacer for email clients -->
      <div style="height: 40px;"></div>
    </body>
    </html>
  "
`;
